--- a/SoulMateA/Main.storyboard
+++ b/SoulMateA/Main.storyboard
@@ -1040,27 +1040,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6Q0-PH-uwZ">
-                            <size key="itemSize" width="50" height="50"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="6Q0-PH-uwZ">
+                            <size key="itemSize" width="120" height="120"/>
                             <size key="headerReferenceSize" width="50" height="258"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="GAp-bc-bOP">
-                                <rect key="frame" x="0.0" y="258" width="100" height="100"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" reuseIdentifier="HisPostCell" id="GAp-bc-bOP" customClass="HisPostCell" customModule="SoulMateA" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="258" width="120" height="120"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="D4N-Pb-Ojb">
-                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oSN-Me-cn6">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="11.png" translatesAutoresizingMaskIntoConstraints="NO" id="oSN-Me-cn6">
+                                            <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                         </imageView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="oSN-Me-cn6" secondAttribute="trailing" id="JNI-Wb-c4x"/>
+                                        <constraint firstAttribute="bottom" secondItem="oSN-Me-cn6" secondAttribute="bottom" id="WxS-kY-PSA"/>
+                                        <constraint firstItem="oSN-Me-cn6" firstAttribute="top" secondItem="D4N-Pb-Ojb" secondAttribute="top" id="u6l-ir-xcW"/>
+                                        <constraint firstItem="oSN-Me-cn6" firstAttribute="leading" secondItem="D4N-Pb-Ojb" secondAttribute="leading" id="wdg-Cv-LZR"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
-                                <size key="customSize" width="100" height="100"/>
+                                <size key="customSize" width="120" height="120"/>
+                                <connections>
+                                    <outlet property="postPictureImageView" destination="oSN-Me-cn6" id="g7f-il-uOm"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="HisDetailPageHeader" id="Ht3-Ff-DlM" customClass="HisDetailPageHeader" customModule="SoulMateA" customModuleProvider="target">
