--- a/SoulMateA/Main.storyboard
+++ b/SoulMateA/Main.storyboard
@@ -242,11 +242,46 @@
                             <outlet property="delegate" destination="kg0-gm-d5V" id="BOp-GY-1Qf"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="匹配" id="ppE-xT-XB3"/>
+                    <navigationItem key="navigationItem" title="匹配" id="ppE-xT-XB3">
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="search" id="8FG-u6-tfw">
+                            <connections>
+                                <segue destination="bjX-xq-Ptc" kind="show" id="t9S-dX-ykt"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8VE-Qc-sSM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="13.6" y="-481.70914542728639"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="9uq-nB-QJX">
+            <objects>
+                <tableViewController id="M5f-wu-Yyg" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="OVV-pz-pIC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="oKf-Lc-66O">
+                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oKf-Lc-66O" id="UGy-Ja-xaH">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="M5f-wu-Yyg" id="hYn-7A-bag"/>
+                            <outlet property="delegate" destination="M5f-wu-Yyg" id="7vi-yh-VId"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="ejz-mx-MeB"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J6X-f7-eM1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1553" y="-483"/>
         </scene>
         <!--消息-->
         <scene sceneID="QDF-Wp-F9L">
@@ -270,19 +305,51 @@
         <!--通讯录-->
         <scene sceneID="lXO-C8-9np">
             <objects>
-                <tableViewController id="LsB-we-JfO" sceneMemberID="viewController">
+                <tableViewController id="LsB-we-JfO" customClass="FriendsTVC" customModule="SoulMateA" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="roK-yO-Igx">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="9Eh-rx-1rb">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FriendCell" rowHeight="67" id="9Eh-rx-1rb" customClass="friendCell" customModule="SoulMateA" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="67"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9Eh-rx-1rb" id="6iR-vQ-2bR">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="67"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="3.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="gIt-yX-lbh">
+                                            <rect key="frame" x="16" y="11" width="45" height="45"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="45" id="OS1-5s-nTs"/>
+                                                <constraint firstAttribute="height" constant="45" id="UyM-4g-4Gg"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="咩啊" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kw2-FZ-2b5">
+                                            <rect key="frame" x="69" y="23" width="180" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="AL6-2a-OAn"/>
+                                                <constraint firstAttribute="width" constant="180" id="Owm-6h-McY"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Kw2-FZ-2b5" firstAttribute="leading" secondItem="gIt-yX-lbh" secondAttribute="trailing" constant="8" id="B2x-io-3x9"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Kw2-FZ-2b5" secondAttribute="bottom" constant="12" id="IHe-6n-LLk"/>
+                                        <constraint firstItem="Kw2-FZ-2b5" firstAttribute="top" secondItem="6iR-vQ-2bR" secondAttribute="topMargin" constant="12" id="NH4-7T-ZiB"/>
+                                        <constraint firstItem="gIt-yX-lbh" firstAttribute="bottom" secondItem="6iR-vQ-2bR" secondAttribute="bottomMargin" id="WJE-a2-9mc"/>
+                                        <constraint firstItem="gIt-yX-lbh" firstAttribute="leading" secondItem="6iR-vQ-2bR" secondAttribute="leadingMargin" id="aJn-4h-fJk"/>
+                                        <constraint firstItem="gIt-yX-lbh" firstAttribute="top" secondItem="6iR-vQ-2bR" secondAttribute="topMargin" id="dUH-mi-6VJ"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Kw2-FZ-2b5" secondAttribute="trailing" constant="110" id="fq8-Ac-9C1"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="headImage" destination="gIt-yX-lbh" id="NZw-rP-bED"/>
+                                    <outlet property="usernameLabel" destination="Kw2-FZ-2b5" id="eey-pw-ew4"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -294,7 +361,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dd7-ug-clU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="818" y="1017"/>
+            <point key="canvasLocation" x="816.79999999999995" y="1016.9415292353824"/>
         </scene>
         <!--消息-->
         <scene sceneID="Bao-d4-j0f">
@@ -1205,7 +1272,26 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="har-DI-azp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="816.79999999999995" y="-482.60869565217394"/>
+            <point key="canvasLocation" x="14" y="-1214"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="sCB-Lk-Qg4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bjX-xq-Ptc" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="VHU-GB-B2e"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ohh-B2-0Ch">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="M5f-wu-Yyg" kind="relationship" relationship="rootViewController" id="UjI-fb-yQ0"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ooy-lv-XcX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="817" y="-482"/>
         </scene>
     </scenes>
     <resources>
