--- a/SoulMateA/Main.storyboard
+++ b/SoulMateA/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aIJ-Ry-tgf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aXE-jf-sLb">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -332,7 +332,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kYF-8v-v5z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="15" y="270"/>
+            <point key="canvasLocation" x="14" y="342"/>
         </scene>
         <!--通讯录-->
         <scene sceneID="lXO-C8-9np">
@@ -439,13 +439,13 @@
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQF-TL-TLn">
+                                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQF-TL-TLn">
                                                             <rect key="frame" x="273.5" y="16.5" width="26.5" height="12"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                             <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dzh-9J-YyE">
+                                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dzh-9J-YyE">
                                                             <rect key="frame" x="273.5" y="5" width="26.5" height="12"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                             <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -731,7 +731,7 @@
                             </constraints>
                         </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="StoryCell" rowHeight="426" id="40I-iz-REZ" customClass="StoryCell" customModule="SoulMateA" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="StoryCell" rowHeight="426" id="40I-iz-REZ" customClass="StoryCell" customModule="SoulMateA" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="426"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="40I-iz-REZ" id="yjY-SJ-8uR">
@@ -831,8 +831,10 @@
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="25" id="OKI-sh-KDE"/>
                                                             </constraints>
-                                                            <state key="normal" title="Button" image="unlike.jpg"/>
-                                                            <state key="selected" image="like.jpg"/>
+                                                            <state key="normal" backgroundImage="unlike"/>
+                                                            <connections>
+                                                                <action selector="likeButtonTapped:" destination="40I-iz-REZ" eventType="touchUpInside" id="MvX-ij-769"/>
+                                                            </connections>
                                                         </button>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g5G-gF-XvO">
                                                             <rect key="frame" x="46" y="0.0" width="30" height="25"/>
@@ -978,7 +980,7 @@
             </objects>
             <point key="canvasLocation" x="817" y="2604"/>
         </scene>
-        <!--MineVC-->
+        <!--我的-->
         <scene sceneID="YTb-TP-Dyj">
             <objects>
                 <viewController id="cne-3i-t2R" customClass="MineVC" customModule="SoulMateA" customModuleProvider="target" sceneMemberID="viewController">
@@ -1093,7 +1095,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TDO-iY-lpg"/>
                     </view>
-                    <navigationItem key="navigationItem" id="tRp-U5-hXm"/>
+                    <navigationItem key="navigationItem" title="我的" id="tRp-U5-hXm"/>
                     <connections>
                         <outlet property="fansLabel" destination="NcR-au-gs9" id="bFv-vA-bpi"/>
                         <outlet property="fansNumberLabel" destination="7Ql-wh-VO5" id="CPT-DC-XZc"/>
@@ -1775,7 +1777,6 @@
         <image name="defaultPhoto.png" width="1080" height="1080"/>
         <image name="ellipses.bubble" catalog="system" width="64" height="54"/>
         <image name="ellipses.bubble.fill" catalog="system" width="64" height="54"/>
-        <image name="like.jpg" width="25" height="25"/>
         <image name="person" catalog="system" width="64" height="58"/>
         <image name="person.fill" catalog="system" width="64" height="60"/>
         <image name="rectangle.stack.person.crop" catalog="system" width="64" height="60"/>
@@ -1784,6 +1785,6 @@
         <image name="star.circle.fill" catalog="system" width="64" height="60"/>
         <image name="suit.heart" catalog="system" width="64" height="54"/>
         <image name="suit.heart.fill" catalog="system" width="64" height="54"/>
-        <image name="unlike.jpg" width="25" height="25"/>
+        <image name="unlike" width="78" height="73"/>
     </resources>
 </document>
